[package]
name = "msf-ice"
version = "0.2.2"
authors = ["Ondrej Perutka <perutka.ondrej@gmail.com>"]
edition = "2021"
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/msf-ice/"
repository = "https://github.com/operutka/msf"
description = """
Interactive Connectivity Establishment (ICE) for Rust.
"""
keywords = ["async", "protocol", "network"]

[dependencies]
bytes = "1"
futures = "0.3"
rand = "0.9"

[dependencies.log]
version = "0.4"
optional = true

[dependencies.msf-stun]
version = "0.1"
features = ["ice"]
path = "../msf-stun"

[dependencies.slog]
version = "2"
optional = true

[dependencies.tokio]
version = "1"
features = ["net", "rt", "time"]
