[package]
name = "msf-rtp"
version = "0.1.0"
authors = ["Ondrej Perutka <perutka.ondrej@gmail.com>"]
edition = "2021"
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/msf-rtp/"
repository = "https://github.com/operutka/msf"
description = """
Real-time Transport Protocol (RTP) for Rust.
"""
keywords = ["protocol", "network", "audio", "video", "media"]

[features]
default = []
pcm = ["msf-sdp"]

[dependencies]
bytes = "1"
futures = "0.3"

[dependencies.msf-sdp]
version = "0.1"
optional = true
path = "../msf-sdp"

[dependencies.tokio]
version = "1"
features = ["rt"]
