[package]
name = "msf-rtp"
version = "0.3.0"
authors = ["Ondrej Perutka <perutka.ondrej@gmail.com>"]
edition = "2021"
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/msf-rtp/"
repository = "https://github.com/operutka/msf"
description = """
Real-time Transport Protocol (RTP) for Rust.
"""
keywords = ["protocol", "network", "audio", "video", "media"]

[features]
default = []
h264 = ["msf-util/h264"]
opus = []
pcm = ["msf-sdp"]
all-codecs = ["h264", "opus", "pcm"]

[dependencies]
bytes = "1"
futures = "0.3"
lru = "0.16"
pin-project-lite = "0.2"
rand = "0.9"

[dependencies.msf-sdp]
version = "0.2"
optional = true
path = "../msf-sdp"

[dependencies.msf-util]
version = "0.1"
optional = true
path = "../msf-util"

[dependencies.tokio]
version = "1"
features = ["rt", "time"]

[dev-dependencies.tokio]
version = "1"
features = ["full"]
