[package]
name = "msf-sdp"
version = "0.2.3"
authors = ["Ondrej Perutka <perutka.ondrej@gmail.com>"]
edition = "2021"
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/msf-sdp/"
repository = "https://github.com/operutka/msf"
description = """
Session Description Protocol (SDP) for Rust.
"""
keywords = ["protocol", "parser", "audio", "video", "media"]

[features]
default = []
ice = ["msf-ice"]
h264 = ["base64", "bytes", "msf-util/h264"]

[dependencies]
str-reader = "0.1"

[dependencies.base64]
version = "0.22"
optional = true

[dependencies.bytes]
version = "1"
optional = true

[dependencies.msf-ice]
version = "0.2"
optional = true
path = "../msf-ice"

[dependencies.msf-util]
version = "0.1"
optional = true
path = "../msf-util"
